chore: fix typo

--- a/dicts/genshin.dict.yaml
+++ b/dicts/genshin.dict.yaml
@@ -187,6 +187,7 @@ sort: by_weight
 陈婷婷	chen ting ting
 赤楯座	chi dun zuo
 螭骨剑	chi gu jian
+赤金魂	chi jin hun
 赤魔王	chi mo wang
 炽焰箭	chi yan jian
 抽胡桃	chou hu tao
@@ -786,6 +787,7 @@ sort: by_weight
 破碎绝岩	po sui jue yan
 普契涅拉	pu qi nie la
 蒲烧鳗肉	pu shao man rou
+棋生断处	qi sheng duan chu
 齐藤壮马	qi teng zhuang ma
 七天神像	qi tian shen xiang
 千风神殿	qian feng shen dian
@@ -907,6 +909,7 @@ sort: by_weight
 望舒客栈	wang shu ke zhan
 威光落雷	wei guang luo lei
 巍然青岩	wei ran qing yan
+危途疑踪	wei tu yi zong
 文火慢煨	wen huo man wei
 文心豆腐	wen xin dou fu
 无工之剑	wu gong zhi jian
@@ -961,6 +964,7 @@ sort: by_weight
 蓄力攻击	xu li gong ji
 虚实工笔	xu shi gong bi
 虚实流动	xu shi liu dong
+须臾百梦	xu yu bai meng
 玄此玉田	xuan ci yu tian
 旋风女仆	xuan feng nv pu
 雪鹤之章	xue he zhi zhang
@@ -1115,6 +1119,7 @@ sort: by_weight
 海滩横行者	hai tan heng xing zhe
 红炉一点雪	hong lu yi dian xue
 花守由美里	hua shou you mei li
+荒梦藏虞渊	huan meng cang yu yuan
 皇女幻绮谭	huang nv huan qi tan
 荒山孤剑录	huang shan gu jian lu
 绘绮之枕印	hui qi zhi zhen yin
@@ -1248,6 +1253,7 @@ sort: by_weight
 创生火柱技能	chuang sheng huo zhu ji neng
 吹往未来诗风	chui wang wei lai shi feng
 大龙卷旋火轮	da long juan xuan huo lun
+蛋包饭圆舞曲	dan bao fan yuan wu qu
 稻妻钓鱼协会	dao qi diao yu xie hui
 嘟嘟莲海鲜羹	du du lian hai xian geng
 渡过烈火贤人	du guo lie huo xian ren
@@ -1324,6 +1330,7 @@ sort: by_weight
 今昔剧画之恶尉	jin xi ju hua zhi e wei
 今昔剧画之虎啮	jin xi ju hua zhi hu nie
 烈烧佑命之侍护	lie shao you ming zhi shi hu
+灵石何故堕此间	ling shi he gu du ci jian
 蜜酱胡萝卜煎肉	mi jiang hu luo bo jian rou
 鸣神御灵的欢喜	ming shen yu ling de huan xi
 蒲公英海的狐狸	pu gong ying hai de hu li
@@ -1348,7 +1355,7 @@ sort: by_weight
 昭告黎明火之鸟	zhao gao li ming huo zhi niao
 真红炽火之大铠	zhen hong chi huo zhi da kai
 珍说澄研真影打	zhen shuo cheng yan zhen ying da
-白之公主与六侏儒 bai zhi gong zhu yu liu zhu ru
+白之公主与六侏儒	bai zhi gong zhu yu liu zhu ru
 拜托了我的狐仙宫司	bai tuo le wo de hu xian gong si
 冒险家罗尔德的日志	mao xian jia luo er de ri zhi
 珊瑚宫民间信仰初勘	shan hu gong min jian xin yang chu kan
